--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
 :root {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
+@media only screen and (min-width: 48em) {
+  :root {
+    font-size: 112.5%;
+  }
+}
 
 .body {
   font-family: "Chivo", sans-serif;
@@ -9,16 +15,20 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+}
 
 .image {
-  display: none; }
+  display: none;
+}
 
 .image__lg {
-  display: none; }
+  display: none;
+}
 
 .dots {
-  display: none; }
+  display: none;
+}
 
 .wrapper {
   display: flex;
@@ -26,7 +36,8 @@
   align-items: center;
   justify-content: space-between;
   align-content: space-between;
-  height: 80%; }
+  height: 80%;
+}
 
 .content {
   display: flex;
@@ -34,57 +45,76 @@
   align-items: center;
   justify-content: space-between;
   align-content: space-between;
-  min-height: 40rem;
-  width: 87.4%; }
-  .content__title {
-    font-size: 2.6rem;
-    line-height: 3.8rem;
-    text-align: center;
-    font-weight: 300;
-    color: #54e6af;
-    text-transform: uppercase; }
-    .content__title--span {
-      color: #fff; }
-  .content__paragraph {
-    font-size: 1.5rem;
-    line-height: 2.5rem;
-    text-align: center;
-    font-weight: 300;
-    color: #c2cbe5; }
-  .content__links {
-    width: 100%;
-    margin-bottom: 2rem; }
-    .content__links--list {
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%;
-      padding-left: 0;
-      list-style-type: none;
-      text-decoration: none;
-      justify-content: space-between; }
+  min-height: 44rem;
+  width: 87.4%;
+}
+.content__box {
+  height: 98%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  align-content: space-between;
+}
+.content__title {
+  font-size: 2.6rem;
+  line-height: 3.8rem;
+  text-align: center;
+  font-weight: 300;
+  color: #54e6af;
+  text-transform: uppercase;
+}
+.content__title--span {
+  color: #fff;
+}
+.content__paragraph {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  text-align: center;
+  font-weight: 300;
+  color: #c2cbe5;
+}
+.content__links {
+  width: 100%;
+  margin-bottom: 2rem;
+}
+.content__links--list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding-left: 0;
+  list-style-type: none;
+  text-decoration: none;
+  justify-content: space-between;
+}
 
 li + li {
-  margin-left: 2rem; }
+  margin-left: 2rem;
+}
 
 .spotify {
   width: 5.6rem;
   height: 1.7rem;
-  opacity: 0.5; }
+  opacity: 0.5;
+}
 
 .apple {
   width: 4.5rem;
   height: 1.7rem;
-  opacity: 0.5; }
+  opacity: 0.5;
+}
 
 .google {
   width: 7.3rem;
   height: 1.1rem;
-  opacity: 0.5; }
+  opacity: 0.5;
+}
 
 .pocket {
   width: 7.7rem;
   height: 1.5rem;
-  opacity: 0.5; }
+  opacity: 0.5;
+}
 
 .action {
   display: flex;
@@ -96,252 +126,70 @@ li + li {
   margin-top: 3rem;
   margin: auto;
   max-width: 40rem;
-  width: 100%; }
-  .action__form {
-    position: relative; }
-  .action__email {
-    font-weight: 400;
-    font-size: 1.4rem;
-    line-height: 2.8rem;
-    border-radius: 10rem;
-    border: none;
-    width: 32.6rem;
-    height: 4.6rem;
-    background-color: #2c344b;
-    mix-blend-mode: normal; }
-    .action__email::placeholder {
-      font-weight: 700;
-      padding-left: 3.2rem;
-      color: #fff;
-      opacity: 0.5; }
-  .action__btn {
-    font-weight: 400;
-    font-size: 1.4rem;
-    line-height: 2.8rem;
-    border-radius: 10rem;
-    border: none;
-    width: 32.6rem;
-    height: 4.6rem;
-    background-color: #54e6af;
-    color: #121725;
-    margin-top: 1.6rem;
-    font-weight: 700; }
-    .action__btn:hover {
-      background-color: #a4f2d4;
-      transform: scale(1.1);
-      transition: ease-in-out 0.8s; }
+  width: 100%;
+}
+.action__form {
+  position: relative;
+}
+.action__email {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2.8rem;
+  border-radius: 10rem;
+  border: none;
+  width: 32.6rem;
+  height: 4.6rem;
+  background-color: #2c344b;
+  mix-blend-mode: normal;
+}
+.action__email::placeholder {
+  font-weight: 700;
+  padding-left: 3.2rem;
+  color: #fff;
+  opacity: 0.5;
+}
+.action__btn {
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2.8rem;
+  border-radius: 10rem;
+  border: none;
+  width: 32.6rem;
+  height: 4.6rem;
+  background-color: #54e6af;
+  color: #121725;
+  margin-top: 1.6rem;
+  font-weight: 700;
+}
+.action__btn:hover {
+  background-color: #a4f2d4;
+  transform: scale(1.1);
+  transition: ease-in-out 0.8s;
+}
 
 #reply {
   font-size: 1.4rem;
   color: #fb3e3e;
   position: absolute;
   top: -22%;
-  left: 20%; }
+  left: 20%;
+}
 
 @media screen and (max-width: 350px) {
   .action__email {
     max-width: 32.6rem;
-    width: 100%; }
+    width: 100%;
+  }
 
   .action__btn {
     max-width: 32.6rem;
-    width: 100%; }
-    .action__btn:hover {
-      background-color: #a4f2d4;
-      transform: scale(1.1);
-      transition: ease-in-out 0.8s; } }
-@media screen and (min-width: 400px) {
-  .wrapper {
-    height: 85%;
-    max-height: 60rem; }
-
-  .content__title {
-    font-size: 3.8rem; } }
-@media screen and (min-width: 768px) {
-  .body {
-    position: relative;
-    background-image: none;
-    background-color: #121725; }
-
-  .image {
-    background: url("../../assets/tablet/ezgif.com-gif-maker.webp") no-repeat center;
-    background-size: cover;
-    width: 49.1rem;
-    height: 76.7rem;
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: -1; }
-
-  .wrapper {
-    height: 95%;
-    max-height: none;
-    margin-top: 5rem;
-    margin-right: 6%; }
-
-  .logo {
-    align-self: flex-start; }
-
-  .content {
-    width: 63.5rem;
-    height: 51rem;
-    background-color: #121725;
-    justify-content: flex-end;
-    align-items: flex-start; }
-    .content__box {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      align-items: flex-start;
-      align-content: flex-start;
-      height: 90%; }
-    .content__title {
-      font-size: 4.8rem;
-      line-height: 5.6rem;
-      text-align: left; }
-    .content__paragraph {
-      font-size: 1.8rem;
-      line-height: 2.8rem;
-      margin: 0;
-      text-align: left;
-      max-width: 44.5rem; }
-    .content__links {
-      height: 3.4rem;
-      order: 3;
-      margin-bottom: 0; }
-      .content__links--list {
-        justify-content: flex-start; }
-
-  li + li {
-    margin-left: 3rem; }
-
-  .spotify {
-    width: 9.6rem;
-    height: 2.9rem;
-    opacity: 0.5; }
-
-  .apple {
-    width: 7.8rem;
-    height: 2.9rem;
-    opacity: 0.5; }
-
-  .google {
-    width: 12.5rem;
-    height: 1.8rem;
-    opacity: 0.5; }
-
-  .pocket {
-    width: 12.9rem;
-    height: 2.6rem;
-    opacity: 0.5; }
-
-  .action {
-    display: flex;
-    align-items: flex-start;
-    width: 42.7rem;
-    height: 5.6rem;
-    margin-left: 0;
-    position: relative; }
-    .action__email {
-      width: 42.7rem;
-      height: 5.6rem;
-      background-color: #2c344b;
-      border-radius: 10rem;
-      color: #fff;
-      opacity: 0.5;
-      mix-blend-mode: normal;
-      font-weight: 400;
-      font-size: 1.4rem;
-      line-height: 2.8rem;
-      border-radius: 10rem;
-      border: none;
-      padding-left: 3.2rem;
-      margin-top: 2rem;
-      border: none; }
-      .action__email::placeholder {
-        font-weight: 700;
-        padding-left: 3rem;
-        color: #fff;
-        opacity: 0.7; }
-    .action__btn {
-      width: 16.2rem;
-      height: 4.6rem;
-      background-color: #54e6af;
-      border-radius: 10rem;
-      color: #121725;
-      font-weight: 400;
-      font-size: 1.4rem;
-      line-height: 2.8rem;
-      border-radius: 10rem;
-      border: none;
-      font-weight: 700;
-      border: none;
-      position: absolute;
-      top: 12.4%;
-      right: 1%;
-      z-index: 2; }
-      .action__btn:hover {
-        background-color: #a4f2d4;
-        transform: scale(1.1);
-        transition: ease-in-out 0.8s; }
-
-  #reply {
-    top: 110%;
-    left: 10%; }
-
-  .dots {
-    background: url("../../assets/desktop/bg-pattern-dots.svg") no-repeat center;
-    background-size: cover;
-    display: block;
-    width: 23.2rem;
-    height: 10.4rem;
-    align-self: flex-start; } }
-@media screen and (min-width: 1440px) {
-  .image {
-    display: none; }
-
-  .logo {
-    padding-top: 1rem; }
-
-  .image__lg {
-    display: block;
-    background: url(../../assets/desktop/ezgif.com-gif-maker.webp) no-repeat center;
-    background-size: cover;
-    width: 88.8rem;
-    height: 64rem;
-    position: absolute;
-    top: 14.5%;
-    right: 0;
-    z-index: -1; }
-
-  .wrapper {
-    width: 77%;
-    height: 76%;
-    max-height: 70rem;
-    flex-wrap: wrap;
-    margin-top: 0;
-    margin-bottom: 4rem;
-    margin-right: 0; }
-
-  .content {
-    width: 72.3rem; }
-    .content__title {
-      font-size: 5.2rem;
-      line-height: 6.2rem; }
-    .content__links {
-      height: 3rem;
-      margin-bottom: 0; }
-      .content__links--list {
-        justify-content: flex-start; }
-
-  .dots {
-    position: absolute;
-    right: 0;
-    bottom: 9%; }
-
-  li + li {
-    margin-left: 4rem; } }
+    width: 100%;
+  }
+  .action__btn:hover {
+    background-color: #a4f2d4;
+    transform: scale(1.1);
+    transition: ease-in-out 0.8s;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
