--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,29 @@
   align-items: center;
   justify-content: center;
 }
+@media only screen and (min-width: 48em) {
+  .body {
+    position: relative;
+    background-image: none;
+    background-color: #121725;
+  }
+}
 
 .image {
   display: none;
+}
+@media only screen and (min-width: 48em) {
+  .image {
+    background: url("../../assets/tablet/ezgif.com-gif-maker.webp") no-repeat center;
+    background-size: cover;
+    width: 27.3rem;
+    height: 42.6rem;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+  }
 }
 
 .image__lg {
@@ -28,6 +48,22 @@
 
 .dots {
   display: none;
+}
+@media only screen and (min-width: 48em) {
+  .dots {
+    background: url("../../assets/desktop/bg-pattern-dots.svg") no-repeat center;
+    background-size: cover;
+    display: block;
+    width: 12.8rem;
+    height: 5.7rem;
+    align-self: flex-start;
+  }
+}
+
+@media only screen and (min-width: 48em) {
+  .logo {
+    align-self: flex-start;
+  }
 }
 
 .wrapper {
@@ -38,15 +74,31 @@
   align-content: space-between;
   height: 80%;
 }
+@media only screen and (min-width: 48em) {
+  .wrapper {
+    height: 95%;
+    max-height: none;
+    margin-top: 2.8rem;
+    margin-right: 6%;
+  }
+}
 
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  align-content: space-between;
   min-height: 44rem;
   width: 87.4%;
+  max-width: 50rem;
+}
+@media only screen and (min-width: 48em) {
+  .content {
+    width: 35.2rem;
+    height: 29rem;
+    justify-content: center;
+    align-items: flex-start;
+  }
 }
 .content__box {
   height: 98%;
@@ -55,6 +107,13 @@
   align-items: center;
   justify-content: space-between;
   align-content: space-between;
+}
+@media only screen and (min-width: 48em) {
+  .content__box {
+    background-color: #121725;
+    width: 100%;
+    height: 28.3rem;
+  }
 }
 .content__title {
   font-size: 2.6rem;
@@ -67,6 +126,13 @@
 .content__title--span {
   color: #fff;
 }
+@media only screen and (min-width: 48em) {
+  .content__title {
+    font-size: 2.6rem;
+    line-height: 3rem;
+    text-align: left;
+  }
+}
 .content__paragraph {
   font-size: 1.5rem;
   line-height: 2.5rem;
@@ -74,9 +140,26 @@
   font-weight: 300;
   color: #c2cbe5;
 }
+@media only screen and (min-width: 48em) {
+  .content__paragraph {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    margin: 0;
+    text-align: left;
+    align-self: flex-start;
+    max-width: 24.7rem;
+  }
+}
 .content__links {
   width: 100%;
   margin-bottom: 2rem;
+}
+@media only screen and (min-width: 48em) {
+  .content__links {
+    height: 1.9rem;
+    order: 3;
+    margin-bottom: 0;
+  }
 }
 .content__links--list {
   display: flex;
@@ -87,33 +170,19 @@
   text-decoration: none;
   justify-content: space-between;
 }
+@media only screen and (min-width: 48em) {
+  .content__links--list {
+    justify-content: flex-start;
+  }
+}
 
 li + li {
   margin-left: 2rem;
 }
-
-.spotify {
-  width: 5.6rem;
-  height: 1.7rem;
-  opacity: 0.5;
-}
-
-.apple {
-  width: 4.5rem;
-  height: 1.7rem;
-  opacity: 0.5;
-}
-
-.google {
-  width: 7.3rem;
-  height: 1.1rem;
-  opacity: 0.5;
-}
-
-.pocket {
-  width: 7.7rem;
-  height: 1.5rem;
-  opacity: 0.5;
+@media only screen and (min-width: 48em) {
+  li + li {
+    margin-left: 1.7rem;
+  }
 }
 
 .action {
@@ -127,6 +196,16 @@ li + li {
   margin: auto;
   max-width: 40rem;
   width: 100%;
+}
+@media only screen and (min-width: 48em) {
+  .action {
+    display: flex;
+    align-items: flex-start;
+    width: 23.7rem;
+    height: 3rem;
+    margin-left: 0;
+    position: relative;
+  }
 }
 .action__form {
   position: relative;
@@ -148,6 +227,30 @@ li + li {
   color: #fff;
   opacity: 0.5;
 }
+@media only screen and (min-width: 48em) {
+  .action__email {
+    width: 23.7rem;
+    height: 3.1rem;
+    background-color: #2c344b;
+    border-radius: 10rem;
+    color: #fff;
+    opacity: 0.5;
+    mix-blend-mode: normal;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 2.8rem;
+    border-radius: 10rem;
+    border: none;
+    margin-top: 1rem;
+    border: none;
+  }
+  .action__email::placeholder {
+    font-size: 0.7rem;
+    line-height: 1.5rem;
+    padding-left: 1.7rem;
+    opacity: 0.7;
+  }
+}
 .action__btn {
   font-weight: 400;
   font-size: 1.4rem;
@@ -166,13 +269,88 @@ li + li {
   transform: scale(1.1);
   transition: ease-in-out 0.8s;
 }
+@media only screen and (min-width: 48em) {
+  .action__btn {
+    width: 9rem;
+    height: 2.5rem;
+    background-color: #54e6af;
+    border-radius: 10rem;
+    color: #121725;
+    font-size: 0.7rem;
+    font-weight: 700;
+    border: none;
+    position: absolute;
+    top: -6%;
+    right: 1%;
+    z-index: 2;
+  }
+}
 
 #reply {
-  font-size: 1.4rem;
   color: #fb3e3e;
   position: absolute;
   top: -22%;
   left: 20%;
+  font-size: 1.4rem;
+}
+@media only screen and (min-width: 48em) {
+  #reply {
+    font-size: 0.7rem;
+    top: 110%;
+    left: 10%;
+  }
+}
+
+.spotify {
+  width: 5.6rem;
+  height: 1.7rem;
+  opacity: 0.5;
+}
+@media only screen and (min-width: 48em) {
+  .spotify {
+    width: 5.3rem;
+    height: 1.6rem;
+    opacity: 0.5;
+  }
+}
+
+.apple {
+  width: 4.5rem;
+  height: 1.7rem;
+  opacity: 0.5;
+}
+@media only screen and (min-width: 48em) {
+  .apple {
+    width: 4.3rem;
+    height: 1.6rem;
+    opacity: 0.5;
+  }
+}
+
+.google {
+  width: 7.3rem;
+  height: 1.1rem;
+  opacity: 0.5;
+}
+@media only screen and (min-width: 48em) {
+  .google {
+    width: 6.9rem;
+    height: 1rem;
+    opacity: 0.5;
+  }
+}
+
+.pocket {
+  width: 7.7rem;
+  height: 1.5rem;
+  opacity: 0.5;
+}
+@media only screen and (min-width: 48em) {
+  .pocket {
+    width: 7.2rem;
+    height: 1.4rem;
+    opacity: 0.5;
+  }
 }
 
 @media screen and (max-width: 350px) {
