Adjusted bottom margin on podcast icons in content box

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,5 @@
 @import "variable";
 @import "mixin";
-@import "layout";
+@import "content";
 @import "form";
 @import "icons";
-@import "breakpoints";
