--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,8 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 @media only screen and (min-width: 48em) {
   .body {
@@ -41,9 +41,27 @@
     z-index: -1;
   }
 }
+@media only screen and (min-width: 90em) {
+  .image {
+    display: none;
+  }
+}
 
 .image__lg {
   display: none;
+}
+@media only screen and (min-width: 90em) {
+  .image__lg {
+    display: block;
+    background: url(../../assets/desktop/ezgif.com-gif-maker.webp) no-repeat center;
+    background-size: cover;
+    width: 49.3rem;
+    height: 35.6rem;
+    position: absolute;
+    top: 14.5%;
+    right: 0;
+    z-index: -1;
+  }
 }
 
 .dots {
@@ -59,10 +77,22 @@
     align-self: flex-start;
   }
 }
+@media only screen and (min-width: 90em) {
+  .dots {
+    position: absolute;
+    right: 0;
+    bottom: 9%;
+  }
+}
 
 @media only screen and (min-width: 48em) {
   .logo {
     align-self: flex-start;
+  }
+}
+@media only screen and (min-width: 90em) {
+  .logo {
+    padding-top: 1rem;
   }
 }
 
@@ -82,6 +112,17 @@
     margin-right: 6%;
   }
 }
+@media only screen and (min-width: 90em) {
+  .wrapper {
+    width: 77%;
+    height: 76%;
+    max-height: 38.9rem;
+    flex-wrap: wrap;
+    margin-top: 0;
+    margin-bottom: 2.2rem;
+    margin-right: 0;
+  }
+}
 
 .content {
   display: flex;
@@ -99,6 +140,22 @@
     min-height: 29rem;
     justify-content: flex-end;
     align-items: flex-start;
+  }
+}
+@media only screen and (min-width: 90em) {
+  .content {
+    width: 40.2rem;
+  }
+  .content__title {
+    font-size: 2.8rem;
+    line-height: 3.4rem;
+  }
+  .content__links {
+    height: 1.7rem;
+    margin-bottom: 0;
+  }
+  .content__links--list {
+    justify-content: flex-start;
   }
 }
 .content__box {
@@ -173,6 +230,7 @@
 @media only screen and (min-width: 48em) {
   .content__links--list {
     justify-content: flex-start;
+    margin-top: 0;
   }
 }
 
@@ -182,6 +240,11 @@ li + li {
 @media only screen and (min-width: 48em) {
   li + li {
     margin-left: 1.7rem;
+  }
+}
+@media only screen and (min-width: 90em) {
+  li + li {
+    margin-left: 2.2rem;
   }
 }
 
@@ -349,23 +412,6 @@ li + li {
     width: 7.2rem;
     height: 1.4rem;
     opacity: 0.5;
-  }
-}
-
-@media screen and (max-width: 350px) {
-  .action__email {
-    max-width: 32.6rem;
-    width: 100%;
-  }
-
-  .action__btn {
-    max-width: 32.6rem;
-    width: 100%;
-  }
-  .action__btn:hover {
-    background-color: #a4f2d4;
-    transform: scale(1.1);
-    transition: ease-in-out 0.8s;
   }
 }
 
