--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -88,6 +88,12 @@
   justify-content: space-between;
 }
 
+@mixin flexCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 // Hover effect
 @mixin hover {
   background-color: lighten($green, 18%);
