--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -140,7 +140,7 @@
     &__links {
       height: 1.7rem;
       margin-bottom: 0;
-      &--list {
+      &-list {
         justify-content: flex-start;
       }
     }
@@ -160,7 +160,7 @@
   &__title {
     @include title-mobile;
     @include font;
-    &--span {
+    &__span {
       color: $text-white;
     }
 
@@ -193,7 +193,7 @@
       margin-bottom: 0;
     }
 
-    &--list {
+    &-list {
       display: flex;
       flex-wrap: wrap;
       width: 100%;
