Adjusting to be true to design specification

--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -139,6 +139,7 @@
     }
     &__links {
       height: 1.7rem;
+      margin-top: 1rem;
       margin-bottom: 0;
       &-list {
         justify-content: flex-start;
