--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -195,12 +195,17 @@
     }
 
     &-list {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -ms-flex-wrap: wrap;
       flex-wrap: wrap;
       width: 100%;
       padding-left: 0;
       list-style-type: none;
       text-decoration: none;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
       justify-content: space-between;
 
       @include breakpoint(medium) {
