--- a/assets/sass/_mixin.scss
+++ b/assets/sass/_mixin.scss
@@ -82,22 +82,41 @@
 
 // Positioning
 @mixin flex-column {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 @mixin flexCenter {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 // Hover effect
 @mixin hover {
   background-color: lighten($green, 18%);
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
   transform: scale(1.1);
+  -webkit-transition: ease-in-out 0.8s;
+  -o-transition: ease-in-out 0.8s;
   transition: ease-in-out 0.8s;
 }
 
