--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -134,17 +134,6 @@
 
   @include breakpoint(large) {
     width: 40.2rem;
-    &__title {
-      @include title-desktop;
-    }
-    &__links {
-      height: 1.7rem;
-      margin-top: 1rem;
-      margin-bottom: 0;
-      &-list {
-        justify-content: flex-start;
-      }
-    }
   }
 
   &__box {
@@ -169,6 +158,11 @@
       @include title-tablet;
       text-align: left;
     }
+
+    @include breakpoint(large) {
+      @include title-desktop;
+      margin-top: 1.2rem;
+    }
   }
 
   &__paragraph {
@@ -192,6 +186,11 @@
       height: 1.9rem;
       order: 3;
       margin-bottom: 0;
+    }
+
+    @include breakpoint(large) {
+      height: 1.7rem;
+      margin-top: 1rem;
     }
 
     &-list {
