--- a/assets/sass/_form.scss
+++ b/assets/sass/_form.scss
@@ -43,7 +43,7 @@
       &-moz-::placeholder,
       &::placeholder {
         font-size: 0.7rem;
-        line-height: 1.5rem;
+        // line-height: 1.5rem;
         padding-left: 1.7rem;
         opacity: 0.7;
       }
